<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Card_for_display_skills"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:background="#00FFFFFF">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:cardBackgroundColor="#FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_card_layout"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:layout_margin="10dp"
            android:background="#00FFFFFF">

            <TextView
                android:id="@+id/text_skills_iq_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="#FFFFFF"
                android:text="@string/skill_iq_score"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_country_s"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toEndOf="@+id/text_score_s" />

            <TextView
                android:id="@+id/text_name_s"
                android:layout_width="194dp"
                android:layout_height="43dp"
                android:background="#FFFFFF"
                android:text="@string/text_name_s"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.723"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.235"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/text_score_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/text_score_s"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/text_skills_iq_score"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_country_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/text_country_s"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.826" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="125dp"
                android:layout_height="117dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.347"
                app:srcCompat="@drawable/skill_iq_trimmed" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>